crates/solidity-v2/testing/snapshots/diagnostics_output/structure/invalid_using_directive_container/file_level/input.sol
// SPDX-License-Identifier: MIT
pragma solidity *;

library L {}

using L for uint256;
